# openbucket

./: .dockerignore  .env.example  .gitattributes  .gitignore  .npmignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  eslint.config.mjs  middleware.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vercel.json  vite.vercel.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  vercel.yml
.openai/: hosting.json
api/: [...path].ts  health.ts  router.ts  usage.ts
api/admin/: overview.ts
api/auth/: login.ts  logout.ts  register.ts  session.ts
api/node/: heartbeat.ts
api/nodes/: [nodeId].ts  index.ts  resolve.ts
app/: dashboard.tsx  globals.css  layout.tsx
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEMO.md  INSTALLATION.md  OPERATIONS.md  PRODUCT_PLAN.md  RELEASING.md  S3_COMPATIBILITY.md  SECURITY.md  VERCEL.md
examples/curl/: README.md  management.ps1  management.sh
examples/javascript/: README.md  package.json  upload.mjs
examples/python/: README.md  upload.py
python/: README.md  pyproject.toml  tox.ini
python/src/openbucket/: __init__.py  cli.py  client.py  exceptions.py  models.py
python/tests/: test_client.py
scripts/: bootstrap-owner.mjs  dev.ps1  dev.sh  install.ps1  install.sh  test-aws-cli-sync.mjs  verify-release.mjs
server/auth/: config.ts  crypto.ts  database.ts  http.ts  service.ts
server/control-plane/: database.ts  model.ts  service.ts
src/cli/: auth-session.ts  main.ts  tunnel.ts
tests/: bootstrap-owner.test.mjs  dashboard-server.test.mjs  docs-links.test.mjs  rendered-html.test.mjs
types/: next-shims.d.ts
vercel/: app.tsx  auth.tsx  control-plane.css  control-plane.tsx  docs.tsx  index.html  landing.tsx  main.tsx  node-discovery.css  node-discovery.tsx  site-shell.tsx  site.css
worker/: index.ts
(+23 files in other folders)
